benchmarks/Rodinia/bfs/log/bfs.compile

---------------------------------------------------------
ter set  4 19:48:48 -03 2018
./benchmarks/Rodinia/bfs/src/bfs.c:47:51: error: expected declaration specifiers or ‘...’ before ‘no_of_nodes’
 void compareResults(int* h_cost, int* h_cost_gpu, no_of_nodes) {
                                                   ^~~~~~~~~~~
./benchmarks/Rodinia/bfs/src/bfs.c: In function ‘BFSGraph’:
./benchmarks/Rodinia/bfs/src/bfs.c:241:2: warning: implicit declaration of function ‘compareResults’ [-Wimplicit-function-declaration]
  compareResults(h_cost, h_cost_gpu, no_of_nodes);
  ^~~~~~~~~~~~~~
./benchmarks/Rodinia/bfs/src/bfs.c:165:11: warning: ‘target’ construct inside of ‘target’ region
   #pragma omp target map(to: h_graph_nodes[:no_of_nodes], h_graph_edges[:edge_list_size], \
           ^~~
